# Boose_PA8

./: .gitignore  readme.md
src/: CMakeLists.txt  binary_search.c  binary_search.h  bubble_sort.c  bubble_sort.h  compare.c  compare.h  funcs-test.c  funcs.c  funcs.h  is_palindrome.c  is_palindrome.h  max_consecutive_integers.c  max_consecutive_integers.h  maximum_occurrences.c  maximum_occurrences.h  my_strlen.c  my_strlen.h  my_strncat.c  my_strncat.h  sum_primes.c  sum_primes.h
test/: CMakeLists.txt
tests/: TEST-binary_search.c  TEST-bubble_sort.c  TEST-compare.c  TEST-is_palindrome.c  TEST-max_consecutive_integers.c  TEST-maximum_occurrences.c  TEST-my_strlen.c  TEST-my_strncat.c  TEST-sum_primes.c
